ensure that previews don’t get wrapped accross columns. refs #178

--- a/res/less/components/group.less
+++ b/res/less/components/group.less
@@ -108,7 +108,7 @@
     });
 
     > li {
-        display: block;
+        display: inline-block;
         padding: 0 0 2rem;
         page-break-inside: avoid;
     }
